add support for get all feeds api
